--- a/index.html
+++ b/index.html
@@ -2,188 +2,198 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Books</title>
-    <link rel="stylesheet" href="/styles/reset.css" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <title>Vite App</title>
   </head>
   <body>
-    <header class="site-header">
-      <div class="wrapper site-header__wrapper">
-        <div class="site-header__start">
-          <a href="#" class="brand">Brand</a>
-        </div>
+    <body>
+      <header class="site-header">
+        <div class="wrapper site-header__wrapper">
+          <div class="site-header__start">
+            <a href="#" class="brand">Brand</a>
+          </div>
 
-        <div class="search">
-          <button class="search__toggle" aria-label="Open search">
-            Search
-          </button>
-          <form class="search__form" action="">
-            <label class="sr-only" for="search">Search</label>
-            <input
-              type="search"
-              name=""
-              id="search"
-              placeholder="Search for the book"
-            />
-          </form>
-        </div>
-
-        <div class="site-header__end">
-          <nav class="nav">
-            <button class="nav__toggle" aria-expanded="false" type="button">
-              menu
+          <div class="search">
+            <button class="search__toggle" aria-label="Open search">
+              Search
             </button>
-            <ul class="nav__wrapper">
-              <li class="nav__item active">
-                <a href="#">
-                  <svg
-                    width="40"
-                    height="40"
-                    viewBox="0 0 40 40"
-                    class="nav-icon"
-                    focusable="false"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M5 13.3333V31.6667C5 35.335 7.99 36.6667 10 36.6667H35V33.3333H10.02C9.25 33.3133 8.33333 33.01 8.33333 31.6667C8.33333 30.3233 9.25 30.02 10.02 30H35V6.66668C35 4.82834 33.505 3.33334 31.6667 3.33334H10C7.99 3.33334 5 4.66501 5 8.33334V13.3333ZM10 6.66668H31.6667V26.6667H8.33333V8.33334C8.33333 6.99001 9.25 6.68668 10 6.66668Z"
-                      fill="#fff"
-                      fill-opacity="1"
-                    />
-                    <path
-                      d="M19.995 23.3333L25.5783 17.8517C25.9226 17.5206 26.1964 17.1234 26.3835 16.684C26.5706 16.2445 26.667 15.7718 26.667 15.2942C26.667 14.8165 26.5706 14.3438 26.3835 13.9044C26.1964 13.4649 25.9226 13.0677 25.5783 12.7367C24.8843 12.0517 23.9484 11.6676 22.9733 11.6676C21.9982 11.6676 21.0623 12.0517 20.3683 12.7367L19.995 13.1L19.6217 12.735C18.9279 12.0501 17.9923 11.6661 17.0175 11.6661C16.0427 11.6661 15.1071 12.0501 14.4133 12.735C14.0691 13.0661 13.7952 13.4632 13.6081 13.9027C13.4211 14.3422 13.3246 14.8149 13.3246 15.2925C13.3246 15.7701 13.4211 16.2428 13.6081 16.6823C13.7952 17.1217 14.0691 17.5189 14.4133 17.85L19.995 23.3333Z"
-                      fill="#fff"
-                      fill-opacity="1"
-                    />
-                  </svg>
-                  <span>Bookmarks</span>
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="#">
-                  <svg
-                    viewBox="0 0 24 24"
-                    width="24px"
-                    height="24px"
-                    x="0"
-                    y="0"
-                    preserveAspectRatio="xMinYMin meet"
-                    class="nav-icon"
-                    focusable="false"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M16,17.85V20a1,1,0,0,1-1,1H1a1,1,0,0,1-1-1V17.85a4,4,0,0,1,2.55-3.73l2.95-1.2V11.71l-0.73-1.3A6,6,0,0,1,4,7.47V6a4,4,0,0,1,4.39-4A4.12,4.12,0,0,1,12,6.21V7.47a6,6,0,0,1-.77,2.94l-0.73,1.3v1.21l2.95,1.2A4,4,0,0,1,16,17.85Zm4.75-3.65L19,13.53v-1a6,6,0,0,0,1-3.31V9a3,3,0,0,0-6,0V9.18a6,6,0,0,0,.61,2.58A3.61,3.61,0,0,0,16,13a3.62,3.62,0,0,1,2,3.24V21h4a1,1,0,0,0,1-1V17.47A3.5,3.5,0,0,0,20.75,14.2Z"
-                      class="inactive-item"
-                      style="fill-opacity: 1"
-                    ></path>
-                    <path
-                      d="M20.74,14.2L19,13.54V12.86l0.25-.41A5,5,0,0,0,20,9.82V9a3,3,0,0,0-6,0V9.82a5,5,0,0,0,.75,2.63L15,12.86v0.68l-1,.37a4,4,0,0,0-.58-0.28l-2.45-1V10.83A8,8,0,0,0,12,7V6A4,4,0,0,0,4,6V7a8,8,0,0,0,1,3.86v1.84l-2.45,1A4,4,0,0,0,0,17.35V20a1,1,0,0,0,1,1H22a1,1,0,0,0,1-1V17.47A3.5,3.5,0,0,0,20.74,14.2ZM16,8.75a1,1,0,0,1,2,0v1.44a3,3,0,0,1-.38,1.46l-0.33.6a0.25,0.25,0,0,1-.22.13H16.93a0.25,0.25,0,0,1-.22-0.13l-0.33-.6A3,3,0,0,1,16,10.19V8.75ZM6,5.85a2,2,0,0,1,4,0V7.28a6,6,0,0,1-.71,2.83L9,10.72a1,1,0,0,1-.88.53H7.92A1,1,0,0,1,7,10.72l-0.33-.61A6,6,0,0,1,6,7.28V5.85ZM14,19H2V17.25a2,2,0,0,1,1.26-1.86L7,13.92v-1a3,3,0,0,0,1,.18H8a3,3,0,0,0,1-.18v1l3.72,1.42A2,2,0,0,1,14,17.21V19Zm7,0H16V17.35a4,4,0,0,0-.55-2l1.05-.4V14.07a2,2,0,0,0,.4.05h0.2a2,2,0,0,0,.4-0.05v0.88l2.53,1a1.5,1.5,0,0,1,1,1.4V19Z"
-                      class="active-item"
-                      style="fill: currentColor"
-                    ></path>
-                  </svg>
-                  <span>My Profile</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
+            <form class="search__form" action="">
+              <label class="sr-only" for="search">Search</label>
+              <input
+                type="search"
+                name=""
+                id="search"
+                placeholder="Search for the book"
+              />
+            </form>
+          </div>
+
+          <div class="site-header__end">
+            <nav class="nav">
+              <button class="nav__toggle" aria-expanded="false" type="button">
+                menu
+              </button>
+              <ul class="nav__wrapper">
+                <li class="nav__item active">
+                  <a href="#">
+                    <svg
+                      width="40"
+                      height="40"
+                      viewBox="0 0 40 40"
+                      class="nav-icon"
+                      focusable="false"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M5 13.3333V31.6667C5 35.335 7.99 36.6667 10 36.6667H35V33.3333H10.02C9.25 33.3133 8.33333 33.01 8.33333 31.6667C8.33333 30.3233 9.25 30.02 10.02 30H35V6.66668C35 4.82834 33.505 3.33334 31.6667 3.33334H10C7.99 3.33334 5 4.66501 5 8.33334V13.3333ZM10 6.66668H31.6667V26.6667H8.33333V8.33334C8.33333 6.99001 9.25 6.68668 10 6.66668Z"
+                        fill="#fff"
+                        fill-opacity="1"
+                      />
+                      <path
+                        d="M19.995 23.3333L25.5783 17.8517C25.9226 17.5206 26.1964 17.1234 26.3835 16.684C26.5706 16.2445 26.667 15.7718 26.667 15.2942C26.667 14.8165 26.5706 14.3438 26.3835 13.9044C26.1964 13.4649 25.9226 13.0677 25.5783 12.7367C24.8843 12.0517 23.9484 11.6676 22.9733 11.6676C21.9982 11.6676 21.0623 12.0517 20.3683 12.7367L19.995 13.1L19.6217 12.735C18.9279 12.0501 17.9923 11.6661 17.0175 11.6661C16.0427 11.6661 15.1071 12.0501 14.4133 12.735C14.0691 13.0661 13.7952 13.4632 13.6081 13.9027C13.4211 14.3422 13.3246 14.8149 13.3246 15.2925C13.3246 15.7701 13.4211 16.2428 13.6081 16.6823C13.7952 17.1217 14.0691 17.5189 14.4133 17.85L19.995 23.3333Z"
+                        fill="#fff"
+                        fill-opacity="1"
+                      />
+                    </svg>
+                    <span>Bookmarks</span>
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a href="#">
+                    <svg
+                      viewBox="0 0 24 24"
+                      width="24px"
+                      height="24px"
+                      x="0"
+                      y="0"
+                      preserveAspectRatio="xMinYMin meet"
+                      class="nav-icon"
+                      focusable="false"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M16,17.85V20a1,1,0,0,1-1,1H1a1,1,0,0,1-1-1V17.85a4,4,0,0,1,2.55-3.73l2.95-1.2V11.71l-0.73-1.3A6,6,0,0,1,4,7.47V6a4,4,0,0,1,4.39-4A4.12,4.12,0,0,1,12,6.21V7.47a6,6,0,0,1-.77,2.94l-0.73,1.3v1.21l2.95,1.2A4,4,0,0,1,16,17.85Zm4.75-3.65L19,13.53v-1a6,6,0,0,0,1-3.31V9a3,3,0,0,0-6,0V9.18a6,6,0,0,0,.61,2.58A3.61,3.61,0,0,0,16,13a3.62,3.62,0,0,1,2,3.24V21h4a1,1,0,0,0,1-1V17.47A3.5,3.5,0,0,0,20.75,14.2Z"
+                        class="inactive-item"
+                        style="fill-opacity: 1"
+                      ></path>
+                      <path
+                        d="M20.74,14.2L19,13.54V12.86l0.25-.41A5,5,0,0,0,20,9.82V9a3,3,0,0,0-6,0V9.82a5,5,0,0,0,.75,2.63L15,12.86v0.68l-1,.37a4,4,0,0,0-.58-0.28l-2.45-1V10.83A8,8,0,0,0,12,7V6A4,4,0,0,0,4,6V7a8,8,0,0,0,1,3.86v1.84l-2.45,1A4,4,0,0,0,0,17.35V20a1,1,0,0,0,1,1H22a1,1,0,0,0,1-1V17.47A3.5,3.5,0,0,0,20.74,14.2ZM16,8.75a1,1,0,0,1,2,0v1.44a3,3,0,0,1-.38,1.46l-0.33.6a0.25,0.25,0,0,1-.22.13H16.93a0.25,0.25,0,0,1-.22-0.13l-0.33-.6A3,3,0,0,1,16,10.19V8.75ZM6,5.85a2,2,0,0,1,4,0V7.28a6,6,0,0,1-.71,2.83L9,10.72a1,1,0,0,1-.88.53H7.92A1,1,0,0,1,7,10.72l-0.33-.61A6,6,0,0,1,6,7.28V5.85ZM14,19H2V17.25a2,2,0,0,1,1.26-1.86L7,13.92v-1a3,3,0,0,0,1,.18H8a3,3,0,0,0,1-.18v1l3.72,1.42A2,2,0,0,1,14,17.21V19Zm7,0H16V17.35a4,4,0,0,0-.55-2l1.05-.4V14.07a2,2,0,0,0,.4.05h0.2a2,2,0,0,0,.4-0.05v0.88l2.53,1a1.5,1.5,0,0,1,1,1.4V19Z"
+                        class="active-item"
+                        style="fill: currentColor"
+                      ></path>
+                    </svg>
+                    <span>My Profile</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
-      </div>
-    </header>
+      </header>
 
-    <main class="wrapper">
+      <main class="wrapper">
         <section class="recently">
-            <div class="recently__card card card_green">
-                <div class="card__image">
-                    <img src="./img/book_1.jpg" alt="">
-                </div>
-
-                <div class="card__empty">
-                </div>
-
-                <div class="card__info">
-                    <h3>Books Head</h3>
-                    <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa elit lectus enim id euismod. Gravida at praesent aliquam, at natoque at leo. Faucibus quam ipsum mi eget consectetur posuere dui vulputate magna.</p>
-                    <p class="card__genre">Detective, Love, History</p>
-                    <button>Now Read!</button>
-                </div>
+          <div class="recently__card card card_green">
+            <div class="card__image">
+              <img src="./img/book_1.jpg" alt="" />
             </div>
 
-            <div class="recently__card card card_pink">
-                <div class="card__image">
-                    <img src="./img/book_2.jpg" alt="">
-                </div>
+            <div class="card__empty"></div>
 
-                <div class="card__empty">
-                </div>
-
-                <div class="card__info">
-                    <h3>Books Head</h3>
-                    <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa elit lectus enim id euismod. Gravida at praesent aliquam, at natoque at leo. Faucibus quam ipsum mi eget consectetur posuere dui vulputate magna.</p>
-                    <p class="card__genre">Detective, Science Fiction, Fantastic</p>
-                    <button>Now Read!</button>
-                </div>
+            <div class="card__info">
+              <h3>Books Head</h3>
+              <p class="card__desc">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa
+                elit lectus enim id euismod. Gravida at praesent aliquam, at
+                natoque at leo. Faucibus quam ipsum mi eget consectetur posuere
+                dui vulputate magna.
+              </p>
+              <p class="card__genre">Detective, Love, History</p>
+              <button>Now Read!</button>
             </div>
+          </div>
+
+          <div class="recently__card card card_pink">
+            <div class="card__image">
+              <img src="./img/book_2.jpg" alt="" />
+            </div>
+
+            <div class="card__empty"></div>
+
+            <div class="card__info">
+              <h3>Books Head</h3>
+              <p class="card__desc">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa
+                elit lectus enim id euismod. Gravida at praesent aliquam, at
+                natoque at leo. Faucibus quam ipsum mi eget consectetur posuere
+                dui vulputate magna.
+              </p>
+              <p class="card__genre">Detective, Science Fiction, Fantastic</p>
+              <button>Now Read!</button>
+            </div>
+          </div>
         </section>
 
         <section class="search">
-            <div class="filter">
-                <h4>Categories</h4>
-                <div class="filter__inputs">
-                    <label>
-                        <input type="checkbox">
-                        Novels
-                    </label>
-                    <label>
-                        <input type="checkbox">
-                        Memory books
-                    </label>
-                    <label>
-                        <input type="checkbox">
-                        Knowledge books
-                    </label>
-                    <label>
-                        <input type="checkbox">
-                        Story books
-                    </label>
-                    <label>
-                        <input type="checkbox">
-                        Religious books
-                    </label>
-                    <label>
-                        <input type="checkbox">
-                        Travel books
-                    </label>
-                </div>
+          <div class="filter">
+            <h4>Categories</h4>
+            <div class="filter__inputs">
+              <label>
+                <input type="checkbox" />
+                Novels
+              </label>
+              <label>
+                <input type="checkbox" />
+                Memory books
+              </label>
+              <label>
+                <input type="checkbox" />
+                Knowledge books
+              </label>
+              <label>
+                <input type="checkbox" />
+                Story books
+              </label>
+              <label>
+                <input type="checkbox" />
+                Religious books
+              </label>
+              <label>
+                <input type="checkbox" />
+                Travel books
+              </label>
             </div>
-            <div class="books">
-                <div class="book">
-                    <img src="./img/book_1.jpg" alt="">
-                </div>
-
-                <div class="book">
-                    <img src="./img/book_2.jpg" alt="">
-                </div>
-
-                <div class="book">
-                    <img src="./img/book_3.jpg" alt="">
-                </div>
-
-                <div class="book">
-                    <img src="./img/book_4.jpg" alt="">
-                </div>
-
-                <div class="book">
-                    <img src="./img/book_5.jpg" alt="">
-                </div>
+          </div>
+          <div class="books">
+            <div class="book">
+              <img src="./img/book_1.jpg" alt="" />
             </div>
+
+            <div class="book">
+              <img src="./img/book_2.jpg" alt="" />
+            </div>
+
+            <div class="book">
+              <img src="./img/book_3.jpg" alt="" />
+            </div>
+
+            <div class="book">
+              <img src="./img/book_4.jpg" alt="" />
+            </div>
+
+            <div class="book">
+              <img src="./img/book_5.jpg" alt="" />
+            </div>
+          </div>
         </section>
-    </main>
+      </main>
 
-    <footer></footer>
+      <footer></footer>
 
-    <script src="/js/main.js"></script>
+      <script src="/js/main.js"></script>
+    </body>
+    <div id="app"></div>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
