add multi-page for vite

--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
               </button>
               <ul class="nav__wrapper">
                 <li class="nav__item">
-                  <a href="/pages/books/books.html">
+                  <a href="/nested/books.html">
                     <img src="./images/books.svg" alt="" />
                     <span>Books</span>
                   </a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="/pages/bookmarks/bookmarks.html">
+                  <a href="/nested/bookmarks.html">
                     <img src="./images/bookmarks.svg" alt="" />
                     <span>Bookmarks</span>
                   </a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="/pages/users/users.html">
+                  <a href="/nested/users.html">
                     <img src="./images/users.svg" alt="" />
                     <span>Users</span>
                   </a>
