--- a/pages/bookmarks/bookmarks.html
+++ b/pages/bookmarks/bookmarks.html
@@ -11,7 +11,7 @@
       <header class="site-header">
         <div class="wrapper site-header__wrapper">
           <div class="site-header__start">
-            <a href="../index.html" class="brand">Brand</a>
+            <a href="../../index.html" class="brand">Brand</a>
           </div>
 
           <div class="search">
@@ -36,7 +36,7 @@
               </button>
               <ul class="nav__wrapper">
                 <li class="nav__item">
-                  <a href="/nested/books.html">
+                  <a href="/pages/books/books.html">
                     <img src="../../images/books.svg" alt="" />
                     <span>Books</span>
                   </a>
@@ -50,7 +50,7 @@
                 </li>
 
                 <li class="nav__item">
-                  <a href="/nested/users.html">
+                  <a href="/pages/users/users.html">
                     <img src="../../images/users.svg" alt="" />
                     <span>Users</span>
                   </a>
