change logo title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="site-header">
       <div class="wrapper site-header__wrapper">
         <div class="site-header__start">
-          <a href="#" class="brand">Brand</a>
+          <a href="#" class="brand">Books project</a>
         </div>
 
         <div class="search">
