--- a/pages/books/books.html
+++ b/pages/books/books.html
@@ -11,7 +11,7 @@
       <header class="site-header">
         <div class="wrapper site-header__wrapper">
           <div class="site-header__start">
-            <a href="../../index.html" class="brand">Brand</a>
+            <a href="../../index.html" class="brand">Books project</a>
           </div>
 
           <div class="search">
