add home icon, fix format

--- a/index.html
+++ b/index.html
@@ -16,26 +16,24 @@
         </div>
 
         <div class="search">
-          <button class="search__toggle" aria-label="Open search">
-            Search
-          </button>
+          <button class="search__toggle" aria-label="Open search">Search</button>
           <form class="search__form" action="">
             <label class="sr-only" for="search">Search</label>
-            <input
-              type="search"
-              name=""
-              id="search"
-              placeholder="Search for the book"
-            />
+            <input type="search" name="" id="search" placeholder="Search for the book" />
           </form>
         </div>
 
         <div class="site-header__end">
           <nav class="nav">
-            <button class="nav__toggle" aria-expanded="false" type="button">
-              menu
-            </button>
+            <button class="nav__toggle" aria-expanded="false" type="button">menu</button>
             <ul class="nav__wrapper">
+              <li class="nav__item active">
+                <a href="#">
+                  <img src="./images/home.svg" alt="" />
+                  <span>Home</span>
+                </a>
+              </li>
+
               <li class="nav__item">
                 <a href="./pages/books/books.html">
                   <img src="./images/books.svg" alt="" />
